# neurogate

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC-V2.md  SPEC.md  compliance_report.py  demo_attack.py  docker-compose.yml  pyproject.toml  requirements.txt  run_demo_e.py  train_decoder.py  verify_audit.py
.github/workflows/: ci.yml
.streamlit/: config.toml
demos/: __init__.py  phaseA_sources.txt  phaseB_crossval.txt  phaseB_decoder.txt  phaseC_demo.py  phaseC_service.txt  phaseD_attacks.txt  phaseD_crypto.txt  phaseD_signed_audit.txt  phaseD_signed_audit_sample.jsonl  phaseD_telemetry.txt  phaseE_dashboard.txt  review_fixes_verified.txt  review_regressions_red.txt  sample_audit.jsonl  sample_compliance_report.html  sample_compliance_report.json  step10_dashboard.txt  step2_signal.txt  step3_decoder.txt  step4_consent.txt  step5_anomaly.txt  step6_crypto.txt  step7_audit.txt  step7_audit_sample.jsonl  step8_gateway.txt  step8_gateway_audit.jsonl  step9_pytest.txt
docs/: DEPLOY.md  _config.yml  index.md
docs/_layouts/: default.html  post.html
docs/_posts/: 2026-06-10-asi-nace-neurogate.md
docs/assets/css/: style.css
examples/: __init__.py  cursor_app.py  messaging_app.py
keys/: audit_ed25519_public.pem
neurogate/: __init__.py  anomaly.py  audit.py  auth.py  config.py  consent.py  crypto_layer.py  crypto_v2.py  dashboard.py  dashboard_service.py  decoder.py  gateway.py  mi_decoder.py  service.py  signal_source.py  signed_audit.py  telemetry_anomaly.py
scripts/: gen_cert.py
sdk/: README.md  pyproject.toml
sdk/neurogate_client/: __init__.py  client.py
tests/: __init__.py  attack_sim.py  test_anomaly.py  test_attacks_service.py  test_audit.py  test_auth.py  test_compliance_report.py  test_consent.py  test_crypto_layer.py  test_crypto_v2.py  test_dashboard_service.py  test_decoder.py  test_gateway.py  test_mi_decoder.py  test_regressions.py  test_sdk_client.py  test_security_hardening.py  test_service.py  test_service_confirmation.py  test_signal_source.py  test_signal_source_v2.py  test_signed_audit.py  test_telemetry_anomaly.py
